# GeneticQuantumWell

./: CMakeLists.txt  Chromosome.cpp  Chromosome.h  Population.cpp  Population.h  eigenEnergies.cpp  eigenEnergies.h  fEven.cpp  fEven.h  fOdd.cpp  fOdd.h  function.cpp  function.h  main.cpp  random.h  random2.h
